Added deployment diagnostic
